--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,41 +51,12 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./... -bench . -benchtime=1x
-
-      - name: Test BSD locks
-        run: go test -v -tags sqlite3_flock ./...
-        if: matrix.os != 'windows-latest'
-
-      - name: Test dot locks
-        run: go test -v -tags sqlite3_dotlk ./...
-        if: matrix.os != 'windows-latest'
-
-      - name: Test modules
-        shell: bash
-        run: |
-          go work init .
-          go work use -r embed gormlite
-          go test -v ./embed/bcw2/...
-
-      - name: Test GORM
-        shell: bash
-        run: gormlite/test.sh
-        if: matrix.os != 'windows-latest'
+        run: go test -v ./...
 
       - name: Collect coverage
         run: |
           go get -tool github.com/dave/courtney@v0.4.4
           go tool courtney
-        if: |
-          github.event_name == 'push' &&
-          matrix.os == 'ubuntu-latest'
-
-      - uses: ncruces/go-coverage-report@v0
-        with:
-          coverage-file: coverage.out
-          chart: true
-          amend: true
         if: |
           github.event_name == 'push' &&
           matrix.os == 'ubuntu-latest'
